--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Simple Node.js webhook server for handling real-time updates",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server"
   },
   "keywords": ["webhook", "server", "api", "notifications"],
   "author": "",
