--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server"
   },
-  "keywords": ["webhook", "server", "api", "notifications"],
+  "keywords": [
+    "webhook",
+    "server",
+    "api",
+    "notifications"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.11.0",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
-    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "helmet": "^7.0.0"
   },
   "devDependencies": {
