--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server"
+    "start": "node server",
+    "tunnel": "npx ngrok http 8080",
+    "dev": "concurrently \"npm run start\" \"npm run tunnel\""
   },
   "keywords": [
     "webhook",
@@ -24,6 +26,8 @@
     "helmet": "^7.0.0"
   },
   "devDependencies": {
+    "concurrently": "^9.2.0",
+    "ngrok": "^5.0.0-beta.2",
     "nodemon": "^3.0.1"
   }
 }
