--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.11.0",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "helmet": "^7.0.0"
+    "helmet": "^7.0.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "concurrently": "^9.2.0",
